--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
             <span> 😑 Jose Pereira</span>
         </div>
 
-        
+        <div class="Cuerpo">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div class="Inferior">
+            <a href="btn-github">@github</a>
+        </div>
     </main>
     
 </body>
