--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="Inferior">
-            <a href="btn-github">@github</a>
+            <a href="https://github.com/kenjin6576/Prueba-corta-1">@github</a>
         </div>
     </main>
     
