--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         </div>
 
         <div class="Cuerpo">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
+            <img class="foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC5oHXvW3SPQ9NQoXQWNtjejXJB221J7N4jg&s" alt="">
         </div>
 
         <div class="Inferior">
